# undercover-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/undercover_agent/: __init__.py  __main__.py  config.py  dumb.py  mitm.py  report.py  server.py  session_log.py
