[project]
name = "undercover-agent"
version = "0.1.0"
description = "An OpenAI-compatible chat completions server that logs harness traffic (dumb or MITM)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Frank A. Krueger" }]
keywords = ["openai", "llm", "proxy", "mitm", "logging", "chat-completions", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "flask>=3.0,<4.0",
    "httpx>=0.27,<1.0",
]

[project.urls]
Homepage = "https://github.com/praeclarum/undercover-agent"
Repository = "https://github.com/praeclarum/undercover-agent"
Issues = "https://github.com/praeclarum/undercover-agent/issues"

[project.scripts]
undercover-agent = "undercover_agent.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
